tests/syntax_tests/data/parsing/errors/scanner/oldDerefOp.res
let newVelocity = velocity +. a *. secondPerFrame^;
let newX = x +. newVelocity *. secondPerFrame^;
